<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fiszki</string>
    <string name="new_quiz">New quiz</string>
    <string name="settings">Settings</string>
    <string name="add_words">Dictionaries</string>
    <string name="statistics">Statistics</string>
    <string name="about">About</string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="number_of_questions">Number of questions</string>
    <string name="language">Base language</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="quizWord">Word to guess</string>
    <string name="showAnswerButton">ShowAnswer</string>
    <string name="quizKnownResponse">I knew it</string>
    <string name="quizUnknownResponse">I didn\'t know</string>
    <string name="mainMenu">Main menu</string>
    <string name="title_activity_repository">Dictionary</string>
    <string name="dictionaries">Dictionaries</string>
    <string name="remove">Remove</string>
    <string name="x">X</string>
    <string name="add_dictionary">Add dictionary</string>
    <string name="main_menu">Main menu</string>
    <string name="home">Home</string>
    <string name="ratio">Ratio</string>
    <string name="correctAnswers">Correct answers</string>
    <string name="ratio_pct">%d %%</string>
    <string name="exit">Exit</string>
    <string name="dictionary">Dictionary</string>
    <string name="add_word">Add word</string>
    <string name="base_word">Base word</string>
    <string name="ref_word">Ref word</string>
    <string name="available_words">Available words</string>
    <string name="directory_name">Directory name</string>
    <string name="directory_description">Description</string>
    <string name="title_activity_settings">Settings</string>
    <string name="languageBase">Base language</string>
    <string name="languageRef">Ref language</string>
    <string name="title_activity_about">About</string>
    <string name="author">Author</string>
    <string name="marcin">Marcin Wachowiak</string>
    <string name="email">E-mail</string>
    <string name="marcinmail">marcin.wachowiak@gmail.com</string>
    <string name="restartQuiz">Re-run quiz</string>
    <string name="couldNotCreateDir">Could not create dictionary</string>
    <string name="couldNotCreateWord">Could not create word</string>
    <string name="couldNotRetrieveBaseLanguage">Could not retrieve base language. Check settings</string>
    <string name="couldNotRetrieveRefLanguage">Could not retrieve ref language. Check settings</string>
    <string name="couldNotDeleteDictionary">Could not delete dictionary</string>
    <string name="couldNotDeleteWord">Could not delete word</string>
    <string name="couldNotRetrieveDictionaries">Could not retrieve list of dictionaries</string>
    <string name="couldNotRetrieveWords">Could not retrieve list of words for given dictionary</string>
    <string name="emptyDictionary">Provided dictionary is empty</string>
    <string name="refresh">Refresh</string>
    <string name="couldNotRetrieveLanguages">Could not retrieve languages from server. Details: %s</string>
    <string name="couldNotUpdateDatabase">Could not update database</string>
    <string name="noDataAvailableOnServer">No data available on server</string>
    <string name="download">Download</string>
    <string name="info">Information</string>
    <string name="error">Error</string>
    <string name="dictionaryDownloaded">Dictionary successfully downloaded</string>
    <string name="networkDisabled">Network is disabled</string>
    <string name="pleaseEnableNetwork">Please enable network data first</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="serverURL">Server URL</string>
    <string name="dictionaryDownloadedButFailedToAdd">Dictionary downloadad but not added to the database. Possible duplicate</string>
    <string name="send_email">Send Email</string>
    <string name="dbNotPopulated">No init data</string>
    <string name="dbNotPopulatedMessage">No data available in the database. Please go to \'Settings\' and verify it</string>
    <string name="download_languages">Click \'Download\' button in order to download init data</string>
    <string name="strategy">Strategy</string>
    <string name="strategy_random">Random</string>
    <string name="strategy_newest">Newest</string>
    <string name="strategy_least_known">Least known</string>
    <string name="dictionaries_all">[ALL]</string>
    <string name="quizResultSaveFailed">Could not store quiz results in the database</string>
</resources>
