<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.mobica.mawa.fiszki.reporsitory.AddDictionaryFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/directory_name" />

    <EditText
        android:id="@+id/dictionaryEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/directory_name"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/directory_description" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/directory_description"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_double_vertical_margin"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageButton
            android:id="@+id/addDirectoryConfirm"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:background="@color/green"
            android:contentDescription="@string/add"
            android:src="@drawable/ok" />

        <ImageButton
            android:id="@+id/addDirectoryCancel"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:background="@color/red"
            android:contentDescription="@string/cancel"
            android:src="@drawable/cancel" />
    </LinearLayout>

</LinearLayout>
