<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="0"
    tools:context="com.mobica.mawa.fiszki.SettingsActivity">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="0px"
            android:layout_weight="1"
            android:text="@string/languageBase" />

        <Spinner
            android:id="@+id/spinnerBaseLanguage"
            android:layout_width="0px"
            android:layout_weight="1" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="0px"
            android:layout_weight="1"
            android:text="@string/languageRef" />

        <Spinner
            android:id="@+id/spinnerRefLanguage"
            android:layout_width="0px"
            android:layout_weight="1" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="0px"
            android:layout_weight="1"
            android:text="@string/serverURL" />

        <EditText
            android:id="@+id/editTextServerUrl"
            android:layout_width="0px"
            android:layout_weight="1" />
    </TableRow>
</TableLayout>
