<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mobica.mawa.fiszki.quiz.QuizSummary"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:stretchColumns="0">

    <TableRow android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >
        <TextView
            android:text="@string/number_of_questions"
            android:layout_weight="1"
            android:layout_width="0px"
            />

        <TextView
            android:id="@+id/textViewNoOfQuestions"
            android:layout_weight="1"
            android:layout_width="0px"
            />
    </TableRow>

    <TableRow android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >
        <TextView
            android:text="@string/correctAnswers"
            android:layout_weight="1"
            android:layout_width="0px"
            />

        <TextView
            android:id="@+id/textViewCorrectAnswers"
            android:layout_weight="1"
            android:layout_width="0px"
            />
    </TableRow>

    <TableRow android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >
        <TextView
            android:text="@string/ratio"
            android:layout_weight="1"
            android:layout_width="0px"
            />

        <TextView
            android:id="@+id/textViewRatio"
            android:layout_weight="1"
            android:layout_width="0px"
            android:textSize="@dimen/activity_word_size"
            />
    </TableRow>

    <TableRow android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_triple_vertical_margin"
        >

    <Button android:layout_weight="1"
        android:text="@string/mainMenu"
        android:onClick="showMainMenu"
        android:textColor="#FFFFFF"
        android:textSize="30sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        />
</TableRow>
</TableLayout>
