<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainScreen"
    >

    <TableRow android:layout_weight="1" android:weightSum="2"
        >
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/quiz"
        android:onClick="gotoQuiz"
        android:layout_weight="1"
        android:contentDescription="@string/new_quiz"
        android:layout_gravity="center_vertical"
        android:background="@null"
    />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dict"
        android:contentDescription="@string/add_words"
        android:onClick="gotoRepository"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:background="@null"
        />
    </TableRow>
<TableRow android:layout_weight="1" android:weightSum="2">
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/stats"
        android:onClick="gotoStats"
        android:contentDescription="@string/statistics"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:background="@null"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/quit"
        android:onClick="gotoQuit"
        android:contentDescription="@string/exit"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:background="@null"
        />
</TableRow>

</TableLayout>



<!--
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainScreen"
    android:orientation="vertical">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_quiz"
        android:onClick="gotoQuiz"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_words"
        android:onClick="gotoRepository"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/statistics"/>


</LinearLayout>
-->