<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mobica.mawa.fiszki.quiz.QuizMenuFragment"
    android:stretchColumns="0"
    >

    <TableRow android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >
    <TextView
        android:id="@+id/quizMenuNumberOfQuestionsTextView"
        android:text="@string/number_of_questions"
        android:layout_weight="1"
        android:layout_width="0px"
        />

    <EditText
        android:id="@+id/editTextNoOfQuestions"
        android:inputType="numberDecimal"
        android:layout_weight="1"
        android:layout_width="0px"
        />
    </TableRow>
<TableRow android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >
    <TextView
        android:id="@+id/quizMenuLanguageTextView"
        android:layout_weight="1"
        android:text="@string/language"
        android:layout_width="0px"
        />

    <Spinner
        android:id="@+id/spinnerLanguage"
        android:layout_weight="1"
        android:layout_width="0px"
        />
</TableRow>
<TableRow android:layout_width="fill_parent"
    android:paddingTop="@dimen/activity_triple_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >
        <Button android:layout_weight="1"
            android:text="@string/start"
            android:onClick="startQuiz"
            android:textColor="#FFFFFF"
            android:textSize="30sp"

            android:layout_height="90dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            />
</TableRow>
</TableLayout>
